--- a/3.0_UPGRADE.md
+++ b/3.0_UPGRADE.md
@@ -1,31 +1,29 @@
 Upgrading from ng-grid 2.0.x to ui-grid 3.0
 
 1. Module name has changed from nggrid to ui.grid
-   directive name has changed from ng-grid to ui-grid
-Before
+   directive name has changed from ng-grid to ui-grid. Before:
 ```html
 <div ng-grid="{ data: data }"></div>
 ```
 ```javascript
-angular.module('yourModule',['ngGrid'];
+angular.module('yourModule', ['ngGrid'];
 ```
 
-After
+After:
 ```html
 <div ui-grid="{ data: data }"></div>
 ```
 ```javascript
-angular.module('yourModule',['ui.Grid'];
+angular.module('yourModule', ['ui.Grid'];
 ```
 
-2. A string value in options.columnDefs is no longer supported.  ColumnDefs are now always watched via $watchCollection
-Before
+2. A string value in options.columnDefs is no longer supported.  ColumnDefs are now always watched via $watchCollection. Before:
 ```javascript
 $scope.myColDefs = {[...]};
 $scope.gridOptions.columnDefs = 'myColDefs'
 ```
 
-After
+After:
 ```javascript
 $scope.gridOptions.columnDefs = $scope.myColDefs = {[...]};
 or 
