--- a/3.0_UPGRADE.md
+++ b/3.0_UPGRADE.md
@@ -14,7 +14,7 @@ After:
 <div ui-grid="{ data: data }"></div>
 ```
 ```javascript
-angular.module('yourModule', ['ui.Grid'];
+angular.module('yourModule', ['ui.grid'];
 ```
 
 2. A string value in options.columnDefs is no longer supported.  ColumnDefs are now always watched via $watchCollection. Before:
