--- a/3.0_UPGRADE.md
+++ b/3.0_UPGRADE.md
@@ -1,7 +1,8 @@
 Upgrading from ng-grid 2.0.x to ui-grid 3.0
 
-1. Module name has changed from nggrid to ui.grid
-   directive name has changed from ng-grid to ui-grid. Before:
+## Module name has changed from nggrid to ui.grid directive name has changed from ng-grid to ui-grid. 
+
+Before:
 ```html
 <div ng-grid="{ data: data }"></div>
 ```
@@ -17,7 +18,11 @@ After:
 angular.module('yourModule', ['ui.grid'];
 ```
 
-2. A string value in options.columnDefs is no longer supported.  ColumnDefs are now always watched via $watchCollection. Before:
+## A string value in options.columnDefs is no longer supported.  
+
+ColumnDefs are now always watched via $watchCollection.
+
+Before:
 ```javascript
 $scope.myColDefs = [...];
 $scope.gridOptions.columnDefs = 'myColDefs'
@@ -30,7 +35,8 @@ or
 $scope.gridOptions.columnDefs = [...];
 ```
 
-3. All columns within columnDefs must have a name or a field.
+## All columns within columnDefs must have a name or a field.
+
 Before:
 ```javascript
 $scope.gridOptions = {
@@ -51,7 +57,8 @@ $scope.gridOptions = {
 };
 ```
 
-4. ui-grid uses an isolate scope, you can no longer access data or functions directly on the parent scope.  You can access a pre-defined scope by using getExternalScopes(), and set this scope using the external-scopes directive.
+## ui-grid uses an isolate scope
+You can no longer access data or functions directly on the parent scope.  You can access a pre-defined scope by using getExternalScopes(), and set this scope using the external-scopes directive.
 
 Before:
 ```javascript
@@ -90,7 +97,9 @@ $scope.edit = function( entity ) {
 <div ui-grid="gridOptions" external-scopes="gridScope" ></div>
 ```
 
-5. Some features previously included in the base are now plugins.  Refer to the tutorials and API documentation at http://ui-grid.info/docs/ for more detail, an example provided below is column resizing.  The plugins are available in the base javascript, using them requires only including the appropriate directive in the grid declaration:
+## Some features previously included in the base are now plugins.  
+
+Refer to the tutorials and API documentation at http://ui-grid.info/docs/ for more detail, an example provided below is column resizing.  The plugins are available in the base javascript, using them requires only including the appropriate directive in the grid declaration:
 
 After:
 ```html
